--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Ribeye&display=swap');
+
 body {
   margin: 0;
   height: '100dvh';
@@ -11,4 +13,14 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.site-title {
+  font-family: 'Ribeye', sans-serif;
+  font-weight: 400;
+  font-size: 10rem;
+  background: white;
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
