--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Ribeye&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Racing+Sans+One&display=swap');
 
 body {
   margin: 0;
@@ -16,8 +16,6 @@ code {
 }
 
 .site-title {
-  font-family: 'Ribeye', sans-serif;
-  font-weight: 400;
   font-size: 10rem;
   background: white;
   -webkit-background-clip: text;
